fix: showOverflowTooltips 在readonly情况下不需要设置table的cell样式

--- a/packages/table/core/index.scss
+++ b/packages/table/core/index.scss
@@ -15,7 +15,7 @@
       display: flex;
     }
   }
-  .el-table__cell {
+  .el-table__cell:not(.is-readonly) {
     & > .cell {
       display: flex;
       align-items: center;
